another changes to push

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a href="about.html" class="btn btn-download">Download CV</a>
+                        <a href="/pdf/CV.pdf" class="btn btn-download">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">php</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Programming Languages</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p95">
@@ -296,7 +296,7 @@
         <!-- Experience & Education Starts -->
         <div class="row">
             <div class="col-12">
-                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience Education <span>&</span> Certifications</h3>
+                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience  Education <span>&</span> Certifications</h3>
             </div>
             <div class="col-lg-6 m-15px-tb">
                 <div class="resume-box">
@@ -357,7 +357,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMP) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMP) <a target="_blank" href="/pdf/PMP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
@@ -365,7 +365,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
@@ -373,7 +373,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">Scrum Alliance</a></h5>
+                            <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="/pdf/CSM.pdf" class="place open-sans-font">Scrum Alliance</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
