--- a/portfolio.html
+++ b/portfolio.html
@@ -110,12 +110,6 @@
                 <h2>Contact</h2>
             </a>
         </li>
-        <li class="icon-box">
-            <i class="fa fa-comments"></i>
-            <a href="blog.html">
-                <h2>Blog</h2>
-            </a>
-        </li>
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
@@ -130,7 +124,6 @@
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li class="active"><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
             </ul>
         </div>
     </nav>
@@ -153,7 +146,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Zu-23 Upgrade</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -161,7 +154,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-2.jpg" alt="Portolio Image" />
-                        <div><span>Youtube Project</span></div>
+                        <div><span>Lean implementation of Issuance process</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -169,7 +162,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-3.jpg" alt="Portolio Image" />
-                        <div><span>Slider Project</span></div>
+                        <div><span>Implementation of revenue accounting system for Airlines</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -177,7 +170,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-4.jpg" alt="Portolio Image" />
-                        <div><span>Local Video Project</span></div>
+                        <div><span>Travel & Ticketing Platform</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -185,7 +178,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-5.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Implementation of Order Management System</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -193,33 +186,20 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-6.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Implementation of Single Sign On</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
                 <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/project-7.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
-                    </figure>
-                </li>
-                <!-- Portfolio Item Ends -->
-                <!-- Portfolio Item Starts -->
+                
                 <li>
                     <figure>
                         <img src="img/projects/project-8.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>IVRS System</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
                 <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/project-9.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
-                    </figure>
-                </li>
                 <!-- Portfolio Item Ends -->
             </ul>
         </section>
