another changes to push

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a href="/pdf/CV.pdf" class="btn btn-download">Download CV</a>
+                        <a href="/portflio-cv/pdf/CV.pdf" class="btn btn-download">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -357,7 +357,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMP) <a target="_blank" href="/pdf/PMP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMP) <a target="_blank" href="/portflio-cv/pdf/PMP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
@@ -365,7 +365,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/portflio-cv/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
@@ -373,7 +373,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="/pdf/CSM.pdf" class="place open-sans-font">Scrum Alliance</a></h5>
+                            <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="/portflio-cv/pdf/CSM.pdf" class="place open-sans-font">Scrum Alliance</a></h5>
                             <p class="open-sans-font">GPA: 4.89 out of 5 </p>
                         </li>
                         <li>
