--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact - Shahriar Shafin</title>
+    <title>Contact - Jignesh Bhatt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
@@ -110,12 +110,6 @@
                 <h2>Contact</h2>
             </a>
         </li>
-        <li class="icon-box">
-            <i class="fa fa-comments"></i>
-            <a href="blog.html">
-                <h2>Blog</h2>
-            </a>
-        </li>
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
@@ -130,7 +124,6 @@
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li class="active"><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
             </ul>
         </div>
     </nav>
@@ -153,21 +146,21 @@
                 <p class="open-sans-font mb-3">Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
                 <p class="open-sans-font custom-span-contact position-relative">
                     <i class="fa fa-envelope-open position-absolute"></i>
-                    <span class="d-block">mail</span>shafinshahriar340@gmail.com
+                    <span class="d-block">mail</span>jigneshbhatt2015@gmail.com
                 </p>
                 <p class="open-sans-font custom-span-contact position-relative">
                     <i class="fa fa-phone-square position-absolute"></i>
-                    <span class="d-block">call</span>+8801726610839
+                    <span class="d-block">call</span>+919987548641
                 </p>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Facebook" target="_blank" href="https://www.facebook.com/shhriar.shafin"><i class="fa fa-facebook"></i></a>
+                    <li class="facebook"><a title="Facebook" target="_blank" href="https://www.facebook.com/jignesh.bhatt.526/"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="twitter"><a title="Twitter" target="_blank" href="https://twitter.com/shhriar_shafin"><i class="fa fa-twitter"></i></a>
+                    <li class="twitter"><a title="Twitter" target="_blank" href="https://twitter.com/jigneshbhatt28"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li class="youtube"><a title="Youtube" target="_blank" href="https://www.youtube.com/c/ShahriarShafin/videos"><i class="fa fa-youtube"></i></a>
+                    <li class="youtube"><a title="Youtube" target="_blank" href="https://www.youtube.com/channel/UChEBDFt2DKAJDFGoIcRyrkA"><i class="fa fa-youtube"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Dribbble" target="_blank" href="https://dribbble.com/shahriarshafin/"><i class="fa fa-dribbble"></i></a>
-                    </li>
+                   <!-- <li class="dribbble"><a title="Dribbble" target="_blank" href="https://dribbble.com/shahriarshafin/"><i class="fa fa-dribbble"></i></a>
+                    </li>-->
                 </ul>
             </div>
             <!-- Left Side Ends -->
