--- a/about.html
+++ b/about.html
@@ -307,9 +307,11 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2016 - Present</span>
                             <h5 class="poppins-font text-uppercase">Sr. Project Manager <span class="place open-sans-font">Infibeam Avenues Ltd.</span></h5>
-                            <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit, </p>
-                            <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit, </p>
-                            <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit, </p>
+                            <p class="open-sans-font">•	Re-imagined the entire digital mobile service experience by providing the solution expertise in designing the telecom system of Saudi’s largest telecom company. </p>
+                            <p class="open-sans-font">•	Delivering projects in the agile environment by conducting 10-day sprints which includes sprint planning, daily scrums and retrospectives ensuring the deliverables are time-bound and measurable. </p>
+                            <p class="open-sans-font">•	Defined the process flows to cater to the various functions like SIM activations, terminations cancellations, etc. as required by a telecom company. </p>
+                            <p class="open-sans-font">•	Managed, Scheduled and Organized the implementation of Java based restful web-services applications like Order Management system and Single Sign-On for Saudi’s major telecom company by being an only point of contact for this project. </p>
+                            <p class="open-sans-font">•	Took charge of custom software development portfolio, over-looked and guided Project Managers working on projects like travel/leisure ticketing platform & loyalty rewards platform. </p>
                         </li>
                         <li>
                             <div class="icon">
@@ -317,9 +319,10 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2014 - 2016</span>
                             <h5 class="poppins-font text-uppercase">Associate Manager <span class="place open-sans-font">Accelya Kale Solutions Ltd.</span></h5>
-                            <p class="open-sans-font">Lorem incididunt dolor sit amet, consectetur eiusmod dunt doldunt dol elit, tempor incididunt</p>
-                            <p class="open-sans-font">Lorem incididunt dolor sit amet, consectetur eiusmod dunt doldunt dol elit, tempor incididunt</p>
-                            <p class="open-sans-font">Lorem incididunt dolor sit amet, consectetur eiusmod dunt doldunt dol elit, tempor incididunt</p>
+                            <p class="open-sans-font">•	Awarded for managing the end to end implementation of the cargo revenue accounting system for Vietnam’s national carrier within the specified timelines and budget.</p>
+                            <p class="open-sans-font">•	Performed project management activities for implementing the accounting system for one of the major carriers Of United States.</p>
+                            <p class="open-sans-font">•	Estimated the budget in the pre-sales stage, carried out the planning and monitoring the activities throughout the lifecycle of the project.</p>
+                            <p class="open-sans-font">•	Conducted the kick-off meeting, requirements gathering and ensuring the SDLC process is rightly followed by securing sign-offs after each phase of the project.</p>
                         </li>
                         <li>
                             <div class="icon">
@@ -327,8 +330,8 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2010 - 2012</span>
                             <h5 class="poppins-font text-uppercase">Sr. Design Engineer <span class="place open-sans-font">Larsen & Toubro Ltd.</span></h5>
-                            <p class="open-sans-font">Lorem ipsum dolor sit amet, tempor incididunt ut laboreconsectetur elit, sed do eiusmod tempor duntt</p>
-                            <p class="open-sans-font">Lorem ipsum dolor sit amet, tempor incididunt ut laboreconsectetur elit, sed do eiusmod tempor duntt</p>
+                            <p class="open-sans-font">•	Developed the entire software based on embedded systems using C/C++ language for the Russian anti-aircraft Zu-23 gun to cater to the Indian Army.</p>
+                            <p class="open-sans-font">•	Continuous engagement with the Israeli partner Elbit systems to ensure the successful integration of both the software systems.</p>
                         </li>
                     </ul>
                 </div>
