--- a/portfolio.html
+++ b/portfolio.html
@@ -230,7 +230,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-1.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -258,9 +268,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <div class="videocontainer">
-                            <iframe class="youtube-video" src="https://www.youtube.com/embed/7e90gBu4pas?enablejsapi=1&amp;version=3&amp;playerapiid=ytplayer" allowfullscreen></iframe>
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
                         </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -288,25 +306,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <div id="slider" class="carousel slide portfolio-slider" data-ride="carousel" data-interval="false">
-                            <ol class="carousel-indicators">
-                                <li data-target="#slider" data-slide-to="0" class="active"></li>
-                                <li data-target="#slider" data-slide-to="1"></li>
-                                <li data-target="#slider" data-slide-to="2"></li>
-                            </ol>
-                            <!-- The slideshow -->
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="img/projects/project-3.jpg" alt="slide 1">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/projects/project-2.jpg" alt="slide 2">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/projects/project-1.jpg" alt="slide 3">
-                                </div>
-                            </div>
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
                         </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -334,9 +344,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <video id="video" class="responsive-video" controls poster="img/projects/project-1.jpg">
-                            <source src="img/projects/video.mp4" type="video/mp4">
-                        </video>
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -364,7 +382,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-5.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -392,7 +420,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-6.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -420,7 +458,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-7.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -448,7 +496,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-8.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -476,7 +534,17 @@
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/project-9.jpg" alt="Portolio Image" />
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>First</li>
+                        <li>Second</li>
+                        <li>Third</li>
+                        <li>Fourth</li>
+                        </ul>
+                        </div>
+                       </figcaption>
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
