--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
                             <h5 class="poppins-font text-uppercase">Project Management Professional (PMP) <a target="_blank" href="/portfolio-cv/pdf/PMP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
-                            <p class="open-sans-font">GPA: 4.89 out of 5 </p>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
                             <div class="icon">
@@ -369,7 +369,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
                             <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/portfolio-cv/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
-                            <p class="open-sans-font">GPA: 4.89 out of 5 </p>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
                             <div class="icon">
@@ -377,7 +377,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
                             <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="/portfolio-cv/pdf/CSM.pdf" class="place open-sans-font">Scrum Alliance</a></h5>
-                            <p class="open-sans-font">GPA: 4.89 out of 5 </p>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
                             <div class="icon">
@@ -385,7 +385,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2015 - Present</span>
                             <h5 class="poppins-font text-uppercase">Lean Six Sigma (Green Belt) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">SSA Business Solutions</a></h5>
-                            <p class="open-sans-font">GPA: 4.89 out of 5 </p>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                     </ul>
                 </div>
