--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
                         <!-- Main Project Content Starts -->
                          <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
                        <figcaption>
-                        <div class="col-12 col-sm-6 mb-2">
+                        <div class="col-12 mb-2">
                         <ul class="mycustom">
                         <li>Developed the entire system for Zu-23 gun on RTOS.</li>
                         <li>It included various modules lie Firing module, Ballistics, Console, Joystick, Encoder, Motors, Pods and a central controller to co-ordinate with all of them.</li>
