--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Agile</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Agile / Scrum Master</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p70">
@@ -296,7 +296,7 @@
         <!-- Experience & Education Starts -->
         <div class="row">
             <div class="col-12">
-                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience  Education <span>&</span> Certifications</h3>
+                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience &nbsp Education <span>&</span> Certifications</h3>
             </div>
             <div class="col-lg-6 m-15px-tb">
                 <div class="resume-box">
@@ -367,7 +367,7 @@
                             <div class="icon">
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
-                            <span class="time open-sans-font text-uppercase">2015 - Present</span>
+                            <span class="time open-sans-font text-uppercase">2020 - Present</span>
                             <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/portfolio-cv/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
@@ -375,7 +375,7 @@
                             <div class="icon">
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
-                            <span class="time open-sans-font text-uppercase">2015 - Present</span>
+                            <span class="time open-sans-font text-uppercase">2018 - Present</span>
                             <h5 class="poppins-font text-uppercase">Certified Scrum Master (CSM) <a target="_blank" href="/portfolio-cv/pdf/CSM.pdf" class="place open-sans-font">Scrum Alliance</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
@@ -383,7 +383,7 @@
                             <div class="icon">
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
-                            <span class="time open-sans-font text-uppercase">2015 - Present</span>
+                            <span class="time open-sans-font text-uppercase">2013 - Present</span>
                             <h5 class="poppins-font text-uppercase">Lean Six Sigma (Green Belt) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">SSA Business Solutions</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
