--- a/portfolio.html
+++ b/portfolio.html
@@ -439,20 +439,20 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>IVRS System</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Deployment of the IVRS</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Envato</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Final Year Project</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">C, Visual-Basic</span>
                                 </div>
-                                <div class="col-6 mb-2">
+                                <!--<div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
-                                </div>
+                                </div>-->
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
@@ -461,10 +461,10 @@
                        <figcaption>
                         <div class="col-12 col-sm-6 mb-2">
                         <ul class="mycustom">
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                        <li>Fourth</li>
+                        <li>This project facilitates any student to avail his attendance record easily by using a telephone line.</li>
+                        <li>This project consisted of Telephone line & a database system from where the data is being retrieved.</li>
+                        <li>Implementation of Micro-controller IS89S51 & various other hardware components was carried out.</li>
+                        <!--<li>Fourth</li>-->
                         </ul>
                         </div>
                        </figcaption>
