--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,8 @@
         <div class="row">
             <!-- Left Side Starts -->
             <div class="col-12 col-lg-4">
-                <h3 class="text-uppercase custom-title mb-0 ft-wt-600 pb-3">Don't be shy !</h3>
-                <p class="open-sans-font mb-3">Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
+                <h3 class="text-uppercase custom-title mb-0 ft-wt-600 pb-3">Feel Free !</h3>
+                <p class="open-sans-font mb-3">Get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
                 <p class="open-sans-font custom-span-contact position-relative">
                     <i class="fa fa-envelope-open position-absolute"></i>
                     <span class="d-block">mail</span>jigneshbhatt2015@gmail.com
