--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
     
     <!--Google Sheets-->
 <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbzhYwI1gsSANwB-nUie9HO6K-extjzF_TlUJMzAgVaXh0y87Yk-/exec'
+            const scriptURL = 'https://docs.google.com/spreadsheets/d/1FDTIGzUpKeAq67y0c2FUXxIDWQH8AQf_fdUFkV_vr4w/edit#gid=0'
             const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
