--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                     <span class="d-block">call</span>+919987548641
                 </p>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Facebook" target="_blank" href="https://www.facebook.com/jignesh.bhatt.526/"><i class="fa fa-facebook"></i></a>
+                    <li class="facebook"><a title="Facebook" target="_blank" href="https://www.facebook.com/Business-leadership-and-Personal-growth-104423538303208"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li class="twitter"><a title="Twitter" target="_blank" href="https://twitter.com/jigneshbhatt28"><i class="fa fa-twitter"></i></a>
                     </li>
