--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2013 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Lean Six Sigma (Green Belt) <a target="_blank" href="https://www.cpscs.edu.bd/" class="place open-sans-font">SSA Business Solutions</a></h5>
+                            <h5 class="poppins-font text-uppercase">Lean Six Sigma (Green Belt) <a>SSA Business Solutions</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                     </ul>
