--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                 <p class="open-sans-font mb-3">Get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
                 <p class="open-sans-font custom-span-contact position-relative">
                     <i class="fa fa-envelope-open position-absolute"></i>
-                    <span class="d-block">mail</span>jigneshbhatt2015@gmail.com
+                    <span class="d-block">mail</span>jigneshbhatt@jigneshbhatt.in
                 </p>
                 <p class="open-sans-font custom-span-contact position-relative">
                     <i class="fa fa-phone-square position-absolute"></i>
