--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -39,7 +39,7 @@
     <script src="js/modernizr.custom.js"></script>
 </head>
 
-<body class="blog-post">
+<body class="blog-post-2">
 <!-- Live Style Switcher Starts - demo only -->
 <div id="switcher" class="">
     <div class="content-switcher">
@@ -158,7 +158,7 @@
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
                 <h1 class="text-uppercase text-capitalize">4 Effective ways of working remotely</h1>
-                <img src="img/blog/blog-post-1.jpg" class="img-fluid" alt="Blog image"/>
+                <img src="img/blog/blog-post-2.jpg" class="img-fluid" alt="Blog image"/>
                 <div class="blog-excerpt open-sans-font pb-5">
                     <p>WFH (Work from Home) is a new buzzword that drew large attention since March last year. Corporates have largely adopted this new way of working as the pandemic prompted many workplaces to undergo this rapid and disruptive change. Remote working has become a new way of life and it is speculated that this is going to be a new setup in the foreseeable future. Many companies especially in the IT industry have already confirmed that working from home would be a standard feature even in a post-pandemic era. Hence it becomes imperative to determine how well this new way of working has augured with experienced professionals in terms of their output and productivity. It does require a lot of learning and adoption of the right ways to ensure they not only achieve their targets in terms of quantum of work done but also maintain the right mental and emotional well-being, given the missing social-quotient in this virtual world. In this article, we would focus on what set of standards and methods we can set and adopt for one to extract the optimum out of the team. The role a Project Manager shoulders this task wherein they need to strike a right balance between micro-managing and exercising oversight on the team’s work while ensuring timely deliveries.</p>
                     <p><strong><u>Excellent Communication & Co-ordination:</u></strong> Communication is the heart of what a Project Manager does. 90% of the PM’s time goes into communication and hence it is inevitable for a PM to have the right tools and standards in place to ensure he communicates with his team members in the required amount. Recurring meetings need to be scheduled with setting an agenda so that the team members come prepared with their talking points and concerns if any. Scrum framework is an excellent approach to take up to have this part aligned. To make things more accountable, online tools like Jira, Asana can be used to get a view of the goals and the tasks that were assigned and their completion status. Kanban is widely used to view the stream of the workflow. Such documentation help streamline communication around delegation and progress.</p>
