--- a/blog.html
+++ b/blog.html
@@ -161,7 +161,7 @@
                             <h3><a href="blog-post.html">Importance of Project Management in the VUCA world</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>The role of a Project Management professional has gone far beyond just managing the projects. They are being viewed as a disrupter...
+                            <p>The role of a Project Management professional has gone far beyond just managing the projects...
                             </p>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                             <h3><a href="blog-post-3.html">Talking Agile from a Business Strategy standpoint</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>The appeal of adopting agile is growing steadily in organizations these days, mainly at a product level. However, it is vital for an organization...
+                            <p>The appeal of adopting agile is growing steadily in organizations these days, mainly at a product level...
                             </p>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             <h3><a href="blog-post-4.html">5 things to pursue to achieve career growth in the corporate arena</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Whenever you land on any new job either as a fresher or an experienced professional, your immediate concern is how to succeed here...
+                            <p>Whenever you land on any new job either as a fresher or an experienced professional, your immediate concern...
                             </p>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                             <h3><a href="blog-post-5.html">Project Management: The evolution and its way forward</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>In today’s dynamic business environment, where half of the organizational activities are wrapped up in projects, the project management has been a focal point for all the projects...
+                            <p>In today’s dynamic business environment, where half of the organizational activities are wrapped up in projects...
                             </p>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
                             <h3><a href="blog-post-6.html">How Mindfulness can change your life</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>In today’s world, we are surrounded with a lot of distractions which only makes us less focused and engaged in the tasks that we are performing...
+                            <p>In today’s world, we are surrounded with a lot of distractions which only makes us less focused and engaged...
                             </p>
                         </div>
                     </div>
