--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -160,7 +160,7 @@
                 <h1 class="text-uppercase text-capitalize">Talking Agile from a Business Strategy standpoint</h1>
                 <img src="img/blog/blog-post-3.jpg" class="img-fluid" alt="Blog image"/>
                 <div class="blog-excerpt open-sans-font pb-5">
-                    <p>The appeal of adopting agile is growing steadily in organizations these days, mainly at a product level. However, it is vital for an organization to apply this agile approach at a strategic level in order to achieve sustainable business objectives. This article will mainly focus on the areas at an organizational level where agile needs to be implemented and how will that help them translate into tangible business results.</p>
+                    <p><br/>The appeal of adopting agile is growing steadily in organizations these days, mainly at a product level. However, it is vital for an organization to apply this agile approach at a strategic level in order to achieve sustainable business objectives. This article will mainly focus on the areas at an organizational level where agile needs to be implemented and how will that help them translate into tangible business results.</p>
                     <p> Every organization charts out its mission which has its strong purpose (Why) and the direction it intends to go. They carry out the strategic planning which outlines the broader approach to achieve its mission-aligned objectives. Strategic planning broadly covers the below activities:</p>
                     <ul class="mycustom">
                         <li>Defining objectives based on the organizational need and desired outcome</li>
