--- a/blog-1.html
+++ b/blog-1.html
@@ -39,7 +39,7 @@
     <script src="js/modernizr.custom.js"></script>
 </head>
 
-<body class="blog-1">
+<body class="blog">
 <!-- Live Style Switcher Starts - demo only -->
 <div id="switcher" class="">
     <div class="content-switcher">
