--- a/blog-post-10.html
+++ b/blog-post-10.html
@@ -158,7 +158,7 @@
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
                 <h1 class="text-uppercase text-capitalize">5 things to start with when working remotely</h1>
-                <img src="img/blog/blog-post-10.jpg" class="img-fluid" alt="Blog image"/>
+                <img src="img/blog/blog-post-10.jpg" class="img-fluid" alt="Blog image" style="margin:0 32%;" />
                 <div class="blog-excerpt open-sans-font pb-5">
                     <p><br/>In one of the previous weeks, I wrote on a few effective ways one can adopt while working remotely for the team to stay motivated, productive and accountable in completing their tasks. This becomes highly relevant for the one who finds himself in a team-handling role. This article would focus more on the things that need to be taken care of in remote working at an individual level.</p>
                     <p>The sudden outbreak of pandemic has left many unprepared in embracing this new way of working. While remote working was offered during pre-pandemic times as well, it was only provided to a designated few largely based on the scenario they are into. Such mass adoption of remote working is unprecedented and so it is vital to discuss those aspects that could negatively affect the employees. This transition definitely brought some relief in terms of cut-down of the need to commute, however, working for longer hours under one roof without much movement and interactions has really taken its toll on employees’ work-life balance & their overall well-being.</p>
