--- a/blog-post-12.html
+++ b/blog-post-12.html
@@ -158,7 +158,7 @@
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
                 <h1 class="text-uppercase text-capitalize">The Power of Discipline & Consistency</h1>
-                <img src="img/blog/blog-post-12.jpg" class="img-fluid" alt="Blog image" style="margin:0 32%;" />
+                <img src="img/blog/woman.jpg" class="img-fluid" alt="Blog image" style="margin:0 32%;" />
                 <div class="blog-excerpt open-sans-font pb-5">
                     <p><br/>While we see a lot of factors that contribute to a successful journey of any ultra-high achievers in this world, right from having the right vision and goals to honing the right skills and talent along with being high on morals and ethics, the one thing that we often overlook is the power of being persistent and staying on course throughout one’s journey. This only trait once imbibed can have an exponential effect on one’s improvement journey, which in turn, will shorten one’s time-span in attaining one’s goals.</p>
                     <p>Today I would be unlocking the enormous benefits one can realize by being persistent throughout their journey in achieving success at the highest level possible.</p>
