--- a/blog-2.html
+++ b/blog-2.html
@@ -201,7 +201,7 @@
                             <h3><a href="blog-post-15.html">The Growing Importance of Program Managers in aiding Business Change</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>In my previous few articles, I wrote on how vital a Project Manager can be in catalyzing...
+                            <p>In my previous few articles, I wrote on how vital a Project Manager...
                             </p>
                         </div>
                     </div>
