--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
     
     <!--Google Sheets-->
 <script>
-            const scriptURL = 'https://docs.google.com/spreadsheets/d/1FDTIGzUpKeAq67y0c2FUXxIDWQH8AQf_fdUFkV_vr4w/edit#gid=0'
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbzMFwK_uRQmLcjNPeUum6R4vuboyHLs7wJZNbj8gU0s4IS4WYHoh67ShI1Fw-Qpt_L7/exec'
             const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
