--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
     
     <!--Google Sheets-->
 <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbzMFwK_uRQmLcjNPeUum6R4vuboyHLs7wJZNbj8gU0s4IS4WYHoh67ShI1Fw-Qpt_L7/exec'
+            const scriptURL = 'https://docs.google.com/spreadsheets/d/18_p25Oleq2iqnCmNF41X5bhkwDpIMOsI1grva2cK_RQ/edit#gid=0'
             const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
