--- a/contact.html
+++ b/contact.html
@@ -213,9 +213,9 @@
 <script src="js/custom.js"></script>
     
     <!--Google Sheets-->
-<script src="https://wzrd.in/standalone/formdata-polyfill"></script>
+<!--<script src="https://wzrd.in/standalone/formdata-polyfill"></script>
 <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
-<script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
+<script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>-->
 <script>
 
 
